# toponymy

./: .gitignore  AUDIT_USAGE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  azure-pipelines.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_audit_functionality.ipynb  tests-requirements.txt
.azure/templates/: run-tests.yml
doc/: api.rst  api_llm_wrappers.rst  api_main_classes.rst  arxiv_topic_labelling.ipynb  cluster_layers.rst  clusterers.ipynb  clustering_options.ipynb  conf.py  embedding_wrappers.rst  exemplar_texts.ipynb  how_toponymy_works.ipynb  index.rst  installation.rst  intro.rst  keyphrases.ipynb  llm_wrappers.rst  plscan_clusterer.rst  prior_topics.ipynb  prior_topics.py  requirements.txt  saving_loading.ipynb  test_audit_functionality.ipynb  test_max_layers_newsgroups.ipynb  topic_summaries.ipynb
doc/_build/: .buildinfo  api.html  api_embedding_wrappers.html  api_llm_wrappers.html  api_main_classes.html  arxiv_topic_labelling.html  cluster_layers.html  clusterers.html  clustering_options.html  embedding_wrappers.html  exemplar_texts.html  genindex.html  how_toponymy_works.html  index.html  installation.html  intro.html  keyphrases.html  keyphrases.ipynb  llm_wrappers.html  objects.inv  params_and_options.html  search.html  searchindex.js  test_audit_functionality.html  test_max_layers_newsgroups.html
doc/_build/.doctrees/: api.doctree  api_embedding_wrappers.doctree  api_llm_wrappers.doctree  api_main_classes.doctree  arxiv_topic_labelling.doctree  cluster_layers.doctree  clusterers.doctree  clustering_options.doctree  embedding_wrappers.doctree  environment.pickle  exemplar_texts.doctree  how_toponymy_works.doctree  index.doctree  installation.doctree  intro.doctree  keyphrases.doctree  llm_wrappers.doctree  params_and_options.doctree  test_audit_functionality.doctree  test_max_layers_newsgroups.doctree
doc/_build/_sources/: api_embedding_wrappers.rst.txt  api_llm_wrappers.rst.txt  api_main_classes.rst.txt  clusterers.ipynb.txt  clustering_options.ipynb.txt  embedding_wrappers.rst.txt  exemplar_texts.ipynb.txt  how_toponymy_works.ipynb.txt  installation.rst.txt  llm_wrappers.rst.txt  params_and_options.rst.txt
examples/: 20newsgroups_embedded_125.parquet  ai_arxiv_coordinates.npz.npy
topicnaming/: __init__.py  llm_wrappers.py  topic_naming.py
topicnaming/tests/: test_topic_naming.py
toponymy/: __init__.py  _new_utils.py  _utils.py  audit.py  cluster_layer.py  clustering.py  debug_logging.py  embedding_wrappers.py  exemplar_texts.py  feature_extraction.py  feature_extractor.py  keyphrases.py  legacy_llm_wrappers.py  llm_wrappers.py  new_clustering.py  new_feature_extractor.py  new_templates.py  new_toponymy.py  new_types.py  new_utility_functions.py  plotting.py  prompt_construction.py  serialization.py  subtopics.py  templates.py  topic_naming.py  topic_tree.py  topicdb.py  toponymy.py  treemap.py  utility_functions.py
toponymy/tests/: conftest.py  object_vectors.npy  subtopic_objects.json  subtopic_vectors.npy  test_async_llm_wrappers.py  test_async_llm_wrappers_base.py  test_audit.py  test_cluster_layer_summary.py  test_cluster_layers.py  test_clustering.py  test_debug_logging.py  test_doc_notebooks.py  test_embedding_wrappers.py  test_exemplar_texts.py  test_keyphrases.py  test_llm_wrapper_base.py  test_llm_wrappers.py  test_migrate_llm_wrappers.py  test_prompt_construction.py  test_serialization.py  test_subtopics.py  test_topic_naming.py  test_topic_tree.py  test_toponymy.py  test_utility_functions.py
toponymy/tests/helpers/: errors.py  llm_test_config.py  make_llm_data.py
toponymy/tests_new/: conftest.py  test_async_llm_wrappers_base.py  test_clustering.py  test_feature_extractor.py  test_new_templates.py  test_objects.json  test_utility_functions_new.py  topic_objects.json  topic_vectors.npy
toponymy/tools/: notebook_data_load.py  notebook_runner.py  notebook_test_helpers.py  notebook_test_replacement.py
toponymy/widgets/: README.md
toponymy/widgets/circlePacking/src/: widget.js
toponymy/widgets/indentedTree/src/: widget.css  widget.js
toponymy/widgets/radialTidyTree/: esbuild.config.mjs  package.json
toponymy/widgets/radialTidyTree/src/: widget.js
