[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "toponymy"
version = "0.4.0"
authors = [{name = "John Healy", email = "jchealy@gmail.com"}, {name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}]
maintainers = [{name = "John Healy", email = "jchealy@gmail.com"}, {name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}]
description = "A library for using large language models to name topics"
readme = "README.rst"
keywords = ["topic modeing", "representation", "cluster", "clustering", "large language models", "LLM", "topic naming"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.0",
    "numba>=0.56",
    "datasets",
    "scikit-learn>=1.6",
    "vectorizers",
    "scipy",
    "fast_hdbscan>=0.2.2",
    "dataclasses",
    "tqdm",
    "tenacity",
    "httpx",
    "apricot-select",
]

[project.urls]
Homepage = "https://github.com/TutteInstitute/toponymy"

[project.optional-dependencies]
dev = [
    "huggingface-hub<1.0",
    "black",
    "isort",
    "pylint",
    "pytest",
    "anthropic",
    "cohere",
    "azure-ai-inference",
    "llama-cpp-python",
    "openai",
    "transformers",
    "bm25s",
    "anywidget",
    "traitlets",
]

[tool.setuptools]
zip-safe = false
packages = ["toponymy"]
include-package-data = true

[tool.setuptools.package-data]
toponymy = [
    "widgets/*/dist/*.js",
    "widgets/*/dist/*.css",
]
