[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "toponymy"
version = "0.4.0"
authors = [{name = "John Healy", email = "jchealy@gmail.com"}, {name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}]
maintainers = [{name = "John Healy", email = "jchealy@gmail.com"}, {name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}]
description = "A library for using large language models to name topics"
readme = "README.rst"
keywords = ["topic modeing", "representation", "cluster", "clustering", "large language models", "LLM", "topic naming"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.0",
    "numba>=0.56",
    "datasets",
    "scikit-learn>=1.6",
    "vectorizers",
    "scipy",
    "fast_hdbscan>=0.2.2",
    "dataclasses",
    "tqdm",
    "tenacity",
    "httpx",
    "apricot-select",
]

[dependency-groups]
dev = [
    "anthropic",
    "anywidget",
    "azure-ai-inference",
    "black",
    "bm25s",
    "cohere",
    "evoc",
    "google-generativeai",
    "huggingface-hub<1.0",
    "isort",
    "llama-cpp-python",
    "mistralai",
    "numpy>=2.0",
    "ollama",
    "openai",
    "pandas>=1.0",
    "psutil",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-azurepipelines",
    "pytest-cov",
    "replicate",
    "requests",
    "sentence-transformers<=5.1.2",
    "together",
    "traitlets",
    "transformers>=4.41.0,<5.0.0",
    "umap-learn",
]

[project.urls]
Homepage = "https://github.com/TutteInstitute/toponymy"

[tool.pytest.ini_options]
markers = [
    "canary: marks tests as canary tests that make live API calls"
]
addopts = "-m 'not canary'"

[tool.setuptools]
zip-safe = false
packages = ["toponymy"]
include-package-data = true

[tool.setuptools.package-data]
toponymy = [
    "widgets/*/dist/*.js",
    "widgets/*/dist/*.css",
]
