[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "toponymy"
version = "0.5.2"
authors = [{name = "John Healy", email = "jchealy@gmail.com"}, {name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}]
maintainers = [{name = "John Healy", email = "jchealy@gmail.com"}, {name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}]
description = "A library for using large language models to name topics"
readme = "README.rst"
keywords = ["topic modeing", "representation", "cluster", "clustering", "large language models", "LLM", "topic naming"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "apricot-select",
    "datasets",
    "fast_hdbscan>=0.3.2",
    "httpx",
    "jinja2",
    "litellm>=1.83.10",
    "numba>=0.56",
    "numpy>=1.21",
    "pandas>=1.0",
    "scikit-learn>=1.6",
    "scipy",
    "tenacity",
    "tokenizers",
    "tqdm",
    "transformers>=4.41.0,<5.0.0", # upper bound transformers for compatibility with sentence-transformers
    "vectorizers",
]

[project.urls]
Homepage = "https://github.com/TutteInstitute/toponymy"

[tool.pytest.ini_options]
markers = [
    "external: marks tests that make live external API calls"
]
addopts = "-m 'not external'"
filterwarnings = [
    "ignore:coroutine '.*' was never awaited:RuntimeWarning:litellm",
]

[tool.setuptools]
zip-safe = false
packages = ["toponymy"]
include-package-data = true

[tool.setuptools.package-data]
toponymy = [
    "widgets/*/dist/*.js",
    "widgets/*/dist/*.css",
]

[project.optional-dependencies]
dev = [
    "anthropic",
    "anywidget",
    "azure-ai-inference",
    "black",
    "bm25s",
    "cohere",
    "evoc",
    "google-generativeai",
    "huggingface-hub<1.0",
    "isort",
    "matplotlib",
    "mistralai",
    "numpy>=2.0",
    "ollama",
    "openai",
    "pandas>=1.0",
    "psutil",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-azurepipelines",
    "pytest-cov",
    "replicate",
    "requests",
    "sentence-transformers<=5.1.2",
    "together",
    "traitlets",
    "umap-learn",
    "pylance",
]
doc = [
    "nbsphinx>=0.9.8",
    "numpydoc>=1.10.0",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme>=3.1.0",
]
llama = [
    "llama-cpp-python",
]
example-notebooks = [
    "datamapplot>=0.7",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "seaborn",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.3",
]
