[metadata]
name = topicnaming
version = 0.3.0
author = John Healy
author_email = jchealy@gmail.com
maintainer = John Healy
maintainer_email = jchealy@gmail.com
description = A library for using large language models to name topics 
long_description = file: README.rst
keywords = topic modeing, representation, cluster, clustering, large language models, LLM, topic naming
url = https://github.com/TutteInstitute/topicnaming
license = MIT License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
zip_safe = False
packages = topicnaming
python_requires = >=3.9
install_requires =
    numpy>=1.21
    pandas>=1.0
    numba>=0.56
    datasets
    scikit-learn
    vectorizers
    scipy
    fast_hdbscan
    sentence_transformers
    dataclasses
    tqdm
