[metadata]
name = toponymy
version = 0.2.0
author = John Healy, Leland McInnes
author_email = jchealy@gmail.com, leland.mcinnes@gmail.com
maintainer = John Healy, Leland McInnes
maintainer_email = jchealy@gmail.com, leland.mcinnes@gmail.com
description = A library for using large language models to name topics 
long_description = file: README.rst
keywords = topic modeing, representation, cluster, clustering, large language models, LLM, topic naming
url = https://github.com/TutteInstitute/toponymy
license = MIT License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
zip_safe = False
packages = toponymy
python_requires = >=3.9
install_requires =
    numpy>=1.21
    pandas>=1.0
    numba>=0.56
    datasets
    scikit-learn
    vectorizers
    scipy
    fast_hdbscan
    sentence_transformers
    dataclasses
    tqdm
    tenacity

[options.extras_require]
dev =
    black
    isort
    pylint
    pytest
    anthropic
    cohere
    llama-cpp-python
    openai
    transformers
    bm25s

# extras_require = {
#     'gpu':  ['CMAKE_ARGS="-DLLAMA_CUDA=on" pip install llama-cpp-python'],
#     'cpu': ['CMAKE_ARGS="-DLLAMA_BLAS=ON -DLLAMA_BLAS_VENDOR=OpenBLAS" llama-cpp-python']
# }
