[metadata]
name = toponymy
version = 0.3.0
author = John Healy, Leland McInnes
author_email = jchealy@gmail.com, leland.mcinnes@gmail.com
maintainer = John Healy, Leland McInnes
maintainer_email = jchealy@gmail.com, leland.mcinnes@gmail.com
description = A library for using large language models to name topics 
long_description = file: README.rst
keywords = topic modeing, representation, cluster, clustering, large language models, LLM, topic naming
url = https://github.com/TutteInstitute/toponymy
license = MIT License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
zip_safe = False
packages = toponymy
python_requires = >=3.9
install_requires =
    numpy>=1.21
    pandas>=1.0
    numba>=0.56
    datasets
    scikit-learn>=1.6
    vectorizers
    scipy
    fast_hdbscan>=0.2.2
    sentence_transformers
    dataclasses
    tqdm
    tenacity
    httpx
    apricot-select

[options.extras_require]
dev =
    black
    isort
    pylint
    pytest
    anthropic
    cohere
    azure-ai-inference
    llama-cpp-python
    openai
    transformers
    bm25s
    anywidget
    traitlets

[options.package_data]
toponymy =
    widgets/*/dist/*.js
    widgets/*/dist/*.css
